--- a/browser/plugin.xml
+++ b/browser/plugin.xml
@@ -23,6 +23,7 @@
      <!-- start res -->
      <!-- res end -->
      <!-- start tsc -->
+     <source-file src="tsc/src/web/widget/TextInputLayoutImpl.ts" target-dir="tsc/src/web/widget"/>
      <!-- tsc end -->
   </platform>
 
