--- a/plugin.xml
+++ b/plugin.xml
@@ -68,6 +68,7 @@
      <!-- start res -->
      <!-- res end -->
      <!-- start tsc -->
+     <source-file src="browser/tsc/src/web/widget/TextInputLayoutImpl.ts" target-dir="tsc/src/web/widget"/>
      <!-- tsc end -->
   </platform>
   <platform name="swt">
@@ -83,6 +84,7 @@
      <!-- start res -->
      <!-- res end -->
      <!-- start tsc -->
+     <source-file src="swt/tsc/src/swt/widget/TextInputLayoutImpl.ts" target-dir="tsc/src/swt/widget"/>
      <!-- tsc end -->
   </platform>
 
