--- a/swt/plugin.xml
+++ b/swt/plugin.xml
@@ -22,6 +22,7 @@
      <!-- start res -->
      <!-- res end -->
      <!-- start tsc -->
+     <source-file src="tsc/src/swt/widget/TextInputLayoutImpl.ts" target-dir="tsc/src/swt/widget"/>
      <!-- tsc end -->
   </platform>
 
