--- a/ios/package.json
+++ b/ios/package.json
@@ -2,6 +2,6 @@
   "name": "com.ashera.textinputlayout.ios",
   "version": "1.0.0",
   "description": "TextInputLayout Plugin",
-  "author": "Ashera",
-  "license": "ISC"
+  "author": "Ram M",
+  "license": "Apache-2.0"
 }
